# smart-menu

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  PRODUCT.md  README.md  Start-Smart-Menu-Local.bat  Start-Smart-Menu.bat  docker-compose.yml  duc-tasks.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  test_api.py
backend/app/: api.py  dependencies.py  main.py
backend/app/core/: config.py  constants.py  database.py  deps.py  exceptions.py  security.py
backend/app/modules/admin/: catalog_rules.py  exceptions.py  import_service.py  normalization.py  router.py  schemas.py  use_cases.py  user_service.py
backend/app/modules/ai/: admin_router.py  admin_schemas.py  client.py  conversation_store.py  exceptions.py  message_formatting.py  personalization.py  plan_explanation.py  ports.py  prompt_store.py  prompts.py  provider_store.py  request_parser.py  router.py  schemas.py  use_cases.py
backend/app/modules/dishes/: __init__.py  router.py  schemas.py
backend/app/modules/identity/: domain.py  exceptions.py  google_verifier.py  models.py  ports.py  repository.py  router.py  schemas.py  use_cases.py
backend/app/modules/ingredients/: domain.py  models.py  (+6 more)
backend/app/shared/: base_model.py  enums.py  pagination.py  result.py  utils.py
backend/app/tests/: conftest.py
backend/migrations/: env.py
backend/scripts/: apply_migrations.py  import_sample_data.py  seed_admin.py  seed_demo.py  seed_ingredients.py  seed_meals.py  validate_import_dataset.py
backend/smart_menu_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+318 files in other folders)
