[project]
name = "smart-menu-backend"
version = "0.1.0"
description = "Smart Menu - Backend API for intelligent meal planning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",  # cần cho pydantic.EmailStr (dùng trong schemas.py)
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt<4.1",  # passlib 1.7.4 không đọc được bcrypt.__about__ ở bcrypt>=4.1 (lỗi đã biết)
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "openpyxl>=3.1.5",
    "ortools>=9.11,<10",
    "cryptography>=42.0.0",
    "google-auth[requests]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
